k8s/aks/native/ihm-angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ihm-angular
  namespace: spring-angular-docker-k8s-aks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ihm-angular
  template:
    metadata:
      labels:
        app: ihm-angular
    spec:
      containers:
        - name: ihm-angular
          image: othmanbouazzaoui/ihm-angular:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ihm-angular
  namespace: spring-angular-docker-k8s-aks
spec:
  selector:
    app: ihm-angular
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
